src/tests/snapshots/funky__tests__wat__fac_ssa.snap
---
source: src/tests/wat.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 1,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 2,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 3,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 4,
                        instruction: OP_LOCAL_GET(
                            1,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 5,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 18,
                        instruction: OP_I64_CONST(
                            1,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 19,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 20,
                        instruction: OP_LOOP(
                            FuncTy(
                                3,
                            ),
                            CodeBlock {
                                id: 1,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 6,
                                        instruction: OP_CALL(
                                            1,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 7,
                                        instruction: OP_CALL(
                                            1,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 8,
                                        instruction: OP_I64_MUL,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 9,
                                        instruction: OP_CALL(
                                            1,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 10,
                                        instruction: OP_I64_CONST(
                                            1,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 11,
                                        instruction: OP_I64_SUB,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 12,
                                        instruction: OP_CALL(
                                            0,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 13,
                                        instruction: OP_I64_CONST(
                                            0,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 14,
                                        instruction: OP_I64_GT_U,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 15,
                                        instruction: OP_BR_IF(
                                            0,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 16,
                                        instruction: OP_DROP,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 17,
                                        instruction: OP_RETURN,
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I64,
                ],
                return_types: [
                    I64,
                    I64,
                ],
            },
            FunctionSignature {
                param_types: [
                    I64,
                    I64,
                ],
                return_types: [
                    I64,
                    I64,
                    I64,
                ],
            },
            FunctionSignature {
                param_types: [
                    I64,
                ],
                return_types: [
                    I64,
                ],
            },
            FunctionSignature {
                param_types: [
                    I64,
                    I64,
                ],
                return_types: [
                    I64,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
            FuncAddr(
                1,
            ),
            FuncAddr(
                2,
            ),
        ],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "fac-ssa",
                value: Function {
                    ty: 2,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I64,
                    ],
                    return_types: [
                        I64,
                        I64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 1,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 2,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I64,
                        I64,
                    ],
                    return_types: [
                        I64,
                        I64,
                        I64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 3,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 4,
                            instruction: OP_LOCAL_GET(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 5,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I64,
                    ],
                    return_types: [
                        I64,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 18,
                            instruction: OP_I64_CONST(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 19,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 20,
                            instruction: OP_LOOP(
                                FuncTy(
                                    3,
                                ),
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 6,
                                            instruction: OP_CALL(
                                                1,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 7,
                                            instruction: OP_CALL(
                                                1,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 8,
                                            instruction: OP_I64_MUL,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 9,
                                            instruction: OP_CALL(
                                                1,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 10,
                                            instruction: OP_I64_CONST(
                                                1,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 11,
                                            instruction: OP_I64_SUB,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 12,
                                            instruction: OP_CALL(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 13,
                                            instruction: OP_I64_CONST(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 14,
                                            instruction: OP_I64_GT_U,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 15,
                                            instruction: OP_BR_IF(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 16,
                                            instruction: OP_DROP,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 17,
                                            instruction: OP_RETURN,
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [
            Value(
                I64(
                    6,
                ),
            ),
        ],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        17,
    ),
}
