src/tests/snapshots/funky__tests__wat__indirect_mid.snap
---
source: src/tests/wat.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 1,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 9,
                        instruction: OP_BLOCK(
                            ValueType(
                                I32,
                            ),
                            CodeBlock {
                                id: 1,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 2,
                                        instruction: OP_I32_CONST(
                                            1,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 3,
                                        instruction: OP_I32_CONST(
                                            2,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 4,
                                        instruction: OP_I32_CONST(
                                            3,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 5,
                                        instruction: OP_LOCAL_GET(
                                            0,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 6,
                                        instruction: OP_SELECT,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 7,
                                        instruction: OP_I32_CONST(
                                            0,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 8,
                                        instruction: OP_CALL_INDIRECT(
                                            0,
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
            FuncAddr(
                1,
            ),
        ],
        table_addrs: [
            TableAddr(
                0,
            ),
        ],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "as-call_indirect-mid",
                value: Function {
                    ty: 1,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 1,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 9,
                            instruction: OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 2,
                                            instruction: OP_I32_CONST(
                                                1,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 3,
                                            instruction: OP_I32_CONST(
                                                2,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 4,
                                            instruction: OP_I32_CONST(
                                                3,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 5,
                                            instruction: OP_LOCAL_GET(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 6,
                                            instruction: OP_SELECT,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 7,
                                            instruction: OP_I32_CONST(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 8,
                                            instruction: OP_CALL_INDIRECT(
                                                0,
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [
            TableInstance {
                elem: [
                    Some(
                        FuncAddr(
                            0,
                        ),
                    ),
                ],
                max: Some(
                    1,
                ),
            },
        ],
        memory: [],
        stack: [
            Value(
                I32(
                    1,
                ),
            ),
        ],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        1,
    ),
}
