src/tests/snapshots/funky__tests__wat__params_break_id.snap
---
source: src/tests/wat.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module_instance: ModuleInstance {
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [
                    I32,
                ],
            },
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                ],
                return_types: [
                    I32,
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
        ],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "params-id-break",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        InstructionWrapper {
                            instruction_id: 9,
                            instruction: OP_I32_CONST(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 10,
                            instruction: OP_LOCAL_SET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 11,
                            instruction: OP_I32_CONST(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 12,
                            instruction: OP_I32_CONST(
                                2,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 13,
                            instruction: OP_LOOP(
                                FuncTy(
                                    1,
                                ),
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 1,
                                            instruction: OP_LOCAL_GET(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 2,
                                            instruction: OP_I32_CONST(
                                                1,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 3,
                                            instruction: OP_I32_ADD,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 4,
                                            instruction: OP_LOCAL_SET(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 5,
                                            instruction: OP_LOCAL_GET(
                                                0,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 6,
                                            instruction: OP_I32_CONST(
                                                10,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 7,
                                            instruction: OP_I32_LT_U,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 8,
                                            instruction: OP_BR_IF(
                                                0,
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 14,
                            instruction: OP_I32_ADD,
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [
            Value(
                I32(
                    3,
                ),
            ),
        ],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        14,
    ),
}
