src/tests/snapshots/funky__tests__wat__test_block.snap
---
source: src/tests/wat.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 2,
                        instruction: OP_BLOCK(
                            ValueType(
                                I32,
                            ),
                            CodeBlock {
                                id: 1,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 1,
                                        instruction: OP_I32_CONST(
                                            1,
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
        ],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "main",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 2,
                            instruction: OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 1,
                                            instruction: OP_I32_CONST(
                                                1,
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [
            Value(
                I32(
                    1,
                ),
            ),
        ],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        1,
    ),
}
